changed image of carousel and changed colors for schedule and map section

--- a/index.html
+++ b/index.html
@@ -64,25 +64,26 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <div class="carousel-caption">
-                    <h2>Indian Grocery On Wheels now in Netherlands</h2>
-                    <i class="fas fa-truck"></i>
+                             <h3>Indian Grocery On Wheels<br> in 5 big cities <br>of Netherlands.
+                            </h3>
+                            <i class="fas fa-truck"></i>
                     </div>
-                    <img src="assets/images/carousel-img.jpg" class="d-block w-100 carousel-image"  >
-                </div>
-                <div class="carousel-item">
-                    <div class="carousel-caption d d-md-block">
-                    <h2>You can buy all your favourite Indian Veggies,Fruits,spices and much more in one stop</h2>
-                    <i class="fas fa-shopping-cart"></i>
-                    </div>
-                    <img src="assets/images/carousel-img.jpg" class="d-block w-100 carousel-image"  >
+                    <img src="assets/images/Indianflags.jpg" class="d-block w-100 carousel-image"  >
                 </div>
                 <div class="carousel-item">
                     <div class="carousel-caption">
-                    <h2>Place your order and pick them at your desired location</h2>
+                    <h3>You can buy all your favourite Indian <br>Veggies, Fruits, spices and<br>much more in one stop</h3>
+                    <i class="fas fa-shopping-cart"></i>
+                    </div>
+                    <img src="assets/images/Indianflags.jpg" class="d-block w-100 carousel-image"  >
+                </div>
+                <div class="carousel-item">
+                    <div class="carousel-caption carousel_caption3">
+                    <h3>Place your order today<br> pick them at your desired location</h3>
                     <button class="btn jumbotron-btn btn-dark btn-order shadow-none" onclick="window.location.href='place_order.html';">
                             Place Order</button>
                     </div>
-                    <img src="assets/images/carousel-img.jpg" class="d-block w-100 carousel-image"  >
+                    <img src="assets/images/Indianflags.jpg" class="d-block w-100 carousel-image"  >
                 </div>
              </div>
             
@@ -160,7 +161,7 @@
     <div id="schedule-rtable">
             <div class="accordion" id="scheduleaccordion">
                 <!-- Monday accordion-->
-                <div class="card">
+                <div class="card card_accordion">
                     <div class="card-header weekday" id="Monday">
                         <h2 class="mb-0">
                             <button class="btn btn-link weekdaybtn" type="button" data-toggle="collapse" data-target="#collapseMon" aria-expanded="true" aria-controls="collapseOne" name="Monday">
@@ -171,13 +172,13 @@
                                 <div class="card-body">
                                     <p class="card-text">Place: Amsterdam</p>
                                     <p class="card-text">Timings: 6 to 9 pm</p>
-                                    <a href="#Google_map_location" class="btn btn-dark">Address</a>
+                                    <a href="#Google_map_location" class="btn btn-address">Address</a>
                                 </div>
                             </div>
                     </div>
                 </div>
                 <!-- Tuesday accordion-->
-                <div class="card">
+                <div class="card card_accordion">
                     <div class="card-header weekday" id="Tuesday">
                         <h2 class="mb-0">
                             <button class="btn btn-link weekdaybtn" type="button" data-toggle="collapse" data-target="#collapseTue" aria-expanded="true" aria-controls="collapseOne" name="Tuesday">
@@ -188,13 +189,13 @@
                                 <div class="card-body">
                                     <p class="card-text">Place: Uterecht</p>
                                     <p class="card-text">Timings: 6 to 9 pm</p>
-                                    <a href="#Google_map_location" class="btn btn-dark">Address</a>
+                                    <a href="#Google_map_location" class="btn btn-address">Address</a>
                                 </div>
                             </div>
                     </div>
                 </div>
                 <!-- Wednesday accordion-->
-                <div class="card">
+                <div class="card card_accordion">
                     <div class="card-header weekday" id="Wednesday">
                         <h2 class="mb-0">
                             <button class="btn btn-link weekdaybtn" type="button" data-toggle="collapse" data-target="#collapseWed" aria-expanded="true" aria-controls="collapseOne" name="Wednesday">
@@ -205,13 +206,13 @@
                                 <div class="card-body">
                                     <p class="card-text">Place: DenBosch</p>
                                     <p class="card-text">Timings: 6 to 9 pm</p>
-                                    <a href="#Google_map_location" class="btn btn-dark">Address</a>
+                                    <a href="#Google_map_location" class="btn btn-address">Address</a>
                                 </div>
                             </div>
                     </div>
                 </div>
                 <!-- Thursday accordion-->
-                <div class="card">
+                <div class="card card_accordion">
                     <div class="card-header weekday" id="Thursday">
                         <h2 class="mb-0">
                             <button class="btn btn-link weekdaybtn" type="button" data-toggle="collapse" data-target="#collapseThu" aria-expanded="true" aria-controls="collapseOne" name="Thursday">
@@ -222,13 +223,13 @@
                                 <div class="card-body">
                                     <p class="card-text">Place: Eindhoven</p>
                                     <p class="card-text">Timings: 6 to 9 pm</p>
-                                    <a href="#Google_map_location" class="btn btn-dark">Address</a>
+                                    <a href="#Google_map_location" class="btn btn-address">Address</a>
                                 </div>
                             </div>
                     </div>
                 </div>
                 <!-- Friday accordion-->
-                <div class="card">
+                <div class="card card_accordion">
                     <div class="card-header weekday" id="Friday">
                         <h2 class="mb-0">
                             <button class="btn btn-link weekdaybtn" type="button" data-toggle="collapse" data-target="#collapseFri" aria-expanded="true" aria-controls="collapseOne" name="Friday">
@@ -239,7 +240,7 @@
                                 <div class="card-body">
                                     <p class="card-text">Place: Mastricht</p>
                                     <p class="card-text">Timings: 6 to 9 pm</p>
-                                    <a href="#Google_map_location" class="btn btn-dark">Address</a>
+                                    <a href="#Google_map_location" class="btn btn-address">Address</a>
                                 </div>
                             </div>
                     </div>
