--- a/place_order.html
+++ b/place_order.html
@@ -78,7 +78,7 @@
                 <form onsubmit="return sendMail(this);" id="orderform" name="contactForm">
                 <div class="form-group">
                     <label for="name">Name</label>
-                    <input type="text" class="form-control" id="name" name="fname" placeholder="Fullname" required="">
+                    <input type="text" class="form-control" id="name" name="fname" placeholder="Fullname" pattern="pattern="[a-zA-Z]" required="">
                 </div>
                 <div class="form-group">
                     <label for="email">Email address</label>
