--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desi Wagon</title>
 
+     <!-- Bootstrap CDN -->
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" rel="stylesheet">
      <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet">
 
-    <!-- Hover.css CDN -->
+    <!-- Hover.css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" integrity="sha512-csw0Ma4oXCAgd/d4nTcpoEoz4nYvvnk21a8VA2h2dzhPAvjbUIK6V3si7/g/HehwdunqqW18RwCJKpD7rL67Xg==" crossorigin="anonymous" />
         
-    <!-- Fontawesome Icons -->
+    <!-- Fontawesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
 
     <!-- Google fonts -->
@@ -112,12 +113,14 @@
     <!-- Schedule Section -->
         <section id="schedule">
             <!-- Table for Large and medium screens-->
-            <div class="container-fluid schedule">
+            <div class="container-fluid schedule-container">
         <div class="row">
             <div class="col">
                 <div id="schedule-header">
                    <h2>Know our Schedule</h2>
-                    <p>We visit 5 places in Netherlands every week.</p>
+                    <p>We receive our consignment from India every saturday.We visit 5 places in Netherlands every week. 
+                        The schedule for which is given below. We are not available on weekends. Please place your orders online to minimise the waiting time at the 
+                    location, as we have the orders packed and ready to be delivered.</p>
                 </div>
             </div>
         </div>
@@ -134,31 +137,31 @@
                         <tr class="tablerow">
                             <td>1</td>
                             <td>Monday</td>
-                            <td>6-9pm</td>
+                            <td>6 - 9 pm</td>
                             <td>Amsterdam<span class="truck hide">  <i class="fas fa-truck"></i></span></td>
                         </tr>
                         <tr class="tablerow">
                             <td>2</td>
                             <td >Tuesday</td>
-                            <td>6-9pm</td>
+                            <td>6 - 9 pm</td>
                             <td>Uterecht<span class="truck hide">  <i class="fas fa-truck"></i></span></td>
                         </tr>
                         <tr class="tablerow">
                             <td>3</td>
                             <td>Wednesday</td>
-                            <td>6-9pm</td>
+                            <td>6 - 9 pm</td>
                             <td>Den Bosch<span class="truck hide">  <i class="fas fa-truck"></i></span></td>
                         </tr>
                         <tr class="tablerow">
                             <td>4</td>
                             <td>Thursday</td>
-                            <td>6-9pm</td>
+                            <td>6 - 9 pm</td>
                             <td>Eindhoven  <span class="truck hide"><i class="fas fa-truck"></i></span></td>
                         </tr>
                         <tr class="tablerow">
                             <td>5</td>
                             <td>Friday</td>
-                            <td>6-9pm</td>
+                            <td>6 - 9 pm</td>
                             <td>Mastricht  <span class="truck hide"><i class="fas fa-truck"></i></span></td>
                         </tr>
                     </table>
