--- a/place_order.html
+++ b/place_order.html
@@ -44,10 +44,10 @@
                             <a href="index.html" class="nav-item nav-link">Home</a>
                         </li>
                         <li class="navbar-item">
-                            <a href="#schedule" class="nav-item nav-link">Schedule</a>
+                            <a href="index.html#schedule" class="nav-item nav-link">Schedule</a>
                         </li>
                         <li class="navbar-item">
-                            <a href="#Google_map_location" class="nav-item nav-link">Location</a>
+                            <a href="index.html#Google_map_location" class="nav-item nav-link">Location</a>
                         </li>
                         
                         <li class="navbar-item">
