added show class to accordion to display current day schedule and changed color of table contents to dark green

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                             Monday<span class="truck hide"><i class="fas fa-truck"></i></span>
                             </button>
                         </h2>
-                            <div id="collapseMon" class="collapse" aria-labelledby="Day1" data-parent="#scheduleaccordion">
+                            <div id="collapseMon" class="collapse" aria-labelledby="Monday" data-parent="#scheduleaccordion">
                                 <div class="card-body">
                                     <p class="card-text">Place: Amsterdam</p>
                                     <p class="card-text">Timings: 6 to 9 pm</p>
@@ -197,7 +197,7 @@
                             Tuesday<span class="truck hide"><i class="fas fa-truck"></i></span>
                             </button>
                         </h2>
-                            <div id="collapseTue" class="collapse" aria-labelledby="headingOne" data-parent="#scheduleaccordion">
+                            <div id="collapseTue" class="collapse" aria-labelledby="Tuesday" data-parent="#scheduleaccordion">
                                 <div class="card-body">
                                     <p class="card-text">Place: Uterecht</p>
                                     <p class="card-text">Timings: 6 to 9 pm</p>
@@ -214,7 +214,7 @@
                             Wednesday<span class="truck hide"><i class="fas fa-truck"></i></span>
                             </button>
                         </h2>
-                            <div id="collapseWed" class="collapse" aria-labelledby="headingOne" data-parent="#scheduleaccordion">
+                            <div id="collapseWed" class="collapse" aria-labelledby="Wednesday" data-parent="#scheduleaccordion">
                                 <div class="card-body">
                                     <p class="card-text">Place: DenBosch</p>
                                     <p class="card-text">Timings: 6 to 9 pm</p>
@@ -231,7 +231,7 @@
                             Thursday<span class="truck hide"><i class="fas fa-truck"></i></span>
                             </button>
                         </h2>
-                            <div id="collapseThu" class="collapse" aria-labelledby="headingOne" data-parent="#scheduleaccordion">
+                            <div id="collapseThu" class="collapse" aria-labelledby="Thursday" data-parent="#scheduleaccordion">
                                 <div class="card-body">
                                     <p class="card-text">Place: Eindhoven</p>
                                     <p class="card-text">Timings: 6 to 9 pm</p>
@@ -248,7 +248,7 @@
                             Friday<span class="truck hide"><i class="fas fa-truck"></i></span>
                             </button>
                         </h2>
-                            <div id="collapseFri" class="collapse" aria-labelledby="headingOne" data-parent="#scheduleaccordion">
+                            <div id="collapseFri" class="collapse" aria-labelledby="Friday" data-parent="#scheduleaccordion">
                                 <div class="card-body">
                                     <p class="card-text">Place: Mastricht</p>
                                     <p class="card-text">Timings: 6 to 9 pm</p>
