--- a/index.html
+++ b/index.html
@@ -284,6 +284,7 @@
                                     <div class="card location hide" id="Amsterdam">
                                         <div class="card-info">
                                             <h4 class="card-title">Amsterdam</h4>
+                                            <img src="assets/images/amsterdam.jpg" alt="pic of amsterdam">
                                             <p class="card-text">ADDRESS: Jan van Galenstraat 4, 1051 KM Amsterdam</p>   
                                             <p class="card-text">LANDMARK: opp to Basis School</p>
                                             <p class="card-text bg-text">we are at this Location on Monday from 6 to 9pm.</p>
