--- a/place_order.html
+++ b/place_order.html
@@ -64,7 +64,7 @@
 
     <!-- acknowledgement message made visible only after the successful submission of the order-->
         <div id="acknowledgement" class="hide">
-            <img src="assets/images/acknowledgement-img.jpg" alt="thankyoupic">
+            <img src="assets/images/place_order/acknowledgement-img.jpg" alt="thankyoupic">
             <h2> Desi Wagon has received Your order!!!</h2>
             <h3>You can pick your orders at the chosen place on the secheduled day.
             Please refer to the <a href="index.html#schedule" class="ack-schedule">schedule</a> to know your day and time of pick up in your Location.</h3>
@@ -73,45 +73,102 @@
 
     <!-- Place order form-->  
     <!--code reference from Bootstrap with modifications-->
-            <div id = "place_order">
+            <div id="place_order">
                 <h3>Send your order Today!!!! </h3>
                 <form onsubmit="return sendMail(this);" id="orderform" name="contactForm">
-                <div class="form-group">
-                    <label for="name">Name</label>
-                    <input type="text" class="form-control" id="name" name="fname" placeholder="Fullname" oninput="return validateForm();" required="">
-                </div>
-                <div class="form-group">
-                    <label for="email">Email address</label>
-                    <input type="email" class="form-control" id="email" name="emailaddress" placeholder="name@example.com" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required="">
-                </div>
-                <div class="form-group">
-                    <label for="mobile">Mobile Number</label>
-                    <input type="tel" class="form-control" id="mobile" name="mobile" placeholder="0687241357" pattern="[0 0-9]{10}" oninvalid="return validateInput();" required="required">
-               
-                </div>
-                <div class="form-group">
-                    <label for="location">Location</label>
-                    <select class="form-control" id="location">
-                        <option>Amsterdam</option>
-                        <option>Uterecht</option>
-                        <option>DenBosch</option>
-                        <option>Eindhoven</option>
-                        <option>Maastricht</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="address">Address</label>
-                    <input type="text" class="form-control" id="address" name="address" value="134 zanddreef Amsterdam">
-                </div>
-                <div class="form-group">
-                    <label for="groceryList">Grocery List</label>
-                    <textarea class="form-control" id="groceryList" name="grocerylist" rows="10" placeholder="Item name - Qty" required=""></textarea>
-                </div>
-                <div class="form-btn">
-                <button type="submit" class="btn btn-form">Submit</button>
-                </div>
-            </form>
-        </div>
+                    <div class="form-group">
+                        <label for="name">Name</label>
+                        <input type="text" class="form-control" id="name" name="fname" placeholder="Fullname" pattern="[a-zA-z]{1,25}" required>  
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email address</label>
+                        <input type="email" class="form-control" id="email" name="emailaddress" placeholder="name@example.com" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="mobile">Mobile Number</label>
+                        <input type="tel" class="form-control" id="mobile" name="mobile" placeholder="6872413575" pattern="[0-9]{10}" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="location">Location</label>
+                        <select class="form-control" id="location">
+                            <option>Amsterdam</option>
+                            <option>Uterecht</option>
+                            <option>DenBosch</option>
+                            <option>Eindhoven</option>
+                            <option>Maastricht</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="address">Address</label>
+                        <input type="text" class="form-control" id="address" name="address" value="134 zanddreef Amsterdam" required>
+                    </div>
+                    <div class="form-group row">
+                        <div class="col-md-7">
+                            <label for="items">Groceries</label>
+                            <select class="form-control" name="grocery_items" id="grocery_items" required>
+                                <optgroup label="Fruits">
+                                    <option value="Guava">Guava</option>
+                                    <option value="Mango">Mango</option>
+                                    <option value="papaya">papaya</option>
+                                    <option value="pineapple">pineapple</option>
+                                    <option value="jackfruit">jackfruit</option>
+                                </optgroup>
+                                <optgroup label="Veggies">
+                                    <option value="ladysfinger-250gms">ladysfinger-250gms</option>
+                                    <option value="clusterbeans-250gms">clusterbeans-250gms</option>
+                                    <option value="bottlegourd-250gms">bottlegourd-250gms</option>
+                                    <option value="bittergourd-250gms">bittergourd-250gms</option>
+                                    <option value="ivygourd-250gms">ivygourd-250gms</option>
+                                </optgroup>
+                                <optgroup label="spices">
+                                    <option value="pepper-50gms">pepper-50gms</option>
+                                    <option value="jeera-50gms">jeera-50gms</option>
+                                    <option value="fenugreek-50gms">fenugreek-50gms</option>
+                                    <option value="corrianderseeds-100gms">corrianderseeds-100gms</option>
+                                    <option value="mustard-50gms">mustard-50gms</option>
+                                </optgroup>
+                                <optgroup label="Grains">
+                                    <option value="Rawrice-5kg">Rawrice-5kg</option>
+                                    <option value="Aata-5kg">Aata-5kg</option>
+                                    <option value="poha-1kg">poha-1kg</option>
+                                    <option value="Thoordhal-1kg">Thoordhal-1kg</option>
+                                    <option value="Moongdhal-1kg">Moongdhal-1kg</option>
+                                    <option value="channadhal-1kg">channadhal-1kg</option>
+                                    <option value="Idlyrice-1kg">Idlyrice-1kg</option>
+                                    <option value="Besan-1kg">Besan-1kg</option>
+                                    <option value="Masoordhal-1kg">Masoordhal-1kg</option>
+                                    <option value="Roastedgram-1kg">Roastedgram-1kg</option>
+                                </optgroup>
+                            </select>
+                        </div>
+                        <div class="col-md-3">
+                            <label for="items">Qty</label>
+                            <select class="form-control" id="quantity" name="quantity" required>
+                                <option>1</option>
+                                <option>2</option>
+                                <option>3</option>
+                                <option>4</option>
+                                <option>5</option>
+                                <option>6</option>
+                                <option>7</option>
+                                <option>8</option>
+                                <option>9</option>
+                                <option>10</option>
+                            </select>
+                        </div>
+                        <div class="col-md-2 btn-add">
+                            <input type="button" value="Add to list" onclick="addItem();">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="groceryList">Grocery List</label>
+                        <textarea class="form-control" id="groceryList" name="grocerylist" rows="20" required></textarea>
+                    </div>
+                    <div class="form-btn">
+                        <button type="submit" class="btn btn-form">Submit</button>
+                    </div>
+                </form>
+             </div>
     <!-- End of  Place order form-->  
 
     <!-- Footer-->
@@ -195,9 +252,13 @@
 
     <!-- Script files-->
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+        
+        <!--custom JS files -->
         <script src="assets/js/getAddress.js"></script>
+        <script src="assets/js/addItem.js"></script>
         <script src="assets/js/sendMail.js"></script> 
     <!-- end of Script files-->    
 </body>
