--- a/place_order.html
+++ b/place_order.html
@@ -75,7 +75,7 @@
     <!--code reference from Bootstrap with modifications-->
             <div id="place_order">
                 <h3>Send your order Today!!!! </h3>
-                <form onsubmit="return sendMail(this);" id="orderform" name="contactForm">
+                <form id="orderForm" name="contactForm">
                     <div class="form-group">
                         <label for="name">Name</label>
                         <input type="text" class="form-control"  id="name" name="fname" placeholder="Fullname" pattern="[a-zA-z]{1,25}" required>  
