added a feature to send the grocery list via email

--- a/grocery.html
+++ b/grocery.html
@@ -165,7 +165,7 @@
                     </div>
                     <div class="form-group">
                         <label for="grocList">Grocery List</label>
-                        <textarea class="form-control" id="grocList" name="grocerylist" rows="20" required title="Grocery List cannot be empty.Please atleast add 1 item to the list"></textarea>
+                        <textarea class="form-control hide" id="grocList" name="grocerylist" rows="20" required title="Grocery List cannot be empty.Please atleast add 1 item to the list"></textarea>
                     </div>
                     <div class="form-btn">
                         <input type="submit" class="btn btn-form" value="submit">
