--- a/grocery.html
+++ b/grocery.html
@@ -163,9 +163,9 @@
                     <div class="form-group">
                     <div id="groceryList">
                     </div>
-                    <div class="form-group">
+                     <div class="form-group">
                         <label for="grocList">Grocery List</label>
-                        <textarea class="form-control hide" id="grocList" name="grocerylist" rows="20" required title="Grocery List cannot be empty.Please atleast add 1 item to the list"></textarea>
+                        <textarea class="form-control" id="grocList" name="grocerylist" rows="20" required title="Grocery List cannot be empty.Please atleast add 1 item to the list"></textarea>
                     </div>
                     <div class="form-btn">
                         <input type="submit" class="btn btn-form" value="submit">
