copied changes from grocery and gadditem to place_order and additem.js respectively

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         </li>
                         
                         <li class="navbar-item">
-                            <button class="btn btn-order shadow-none" onclick="window.location.href='grocery.html';">
+                            <button class="btn btn-order shadow-none" onclick="window.location.href='place_order.html';">
                             Place Order</button>
                         </li>
                     </ul>
