--- a/grocery.html
+++ b/grocery.html
@@ -78,7 +78,7 @@
                 <form onsubmit="return sendMail(this);" id="orderForm" name="contactForm">
                     <div class="form-group">
                         <label for="name">Name</label>
-                        <input type="text" class="form-control"  id="name" name="fname" placeholder="Fullname" pattern="[a-zA-z]{1,25}" required title="name cannot be empty and should only contain letters. e.g. John'"> 
+                        <input type="text" class="form-control"  id="name" name="fname" placeholder="Fullname" pattern="[a-zA-z]{1,25}" required title="name cannot be empty and should only contain letters. e.g. John"> 
                     </div>
                     <div class="form-group">
                         <label for="email">Email address</label>
@@ -161,10 +161,11 @@
                         </div>
                     </div>
                     <div class="form-group">
+                    <label for="grocList">Grocery List</label>
                     <div id="groceryList">
                     </div>
-                     <div class="form-group">
-                        <label for="grocList">Grocery List</label>
+                     <div class="form-group hide">
+                        
                         <textarea class="form-control" id="grocList" name="grocerylist" rows="20" required title="Grocery List cannot be empty.Please atleast add 1 item to the list"></textarea>
                     </div>
                     <div class="form-btn">
