added form validation to sendMail.js

--- a/place_order.html
+++ b/place_order.html
@@ -51,7 +51,7 @@
                         </li>
                         
                         <li class="navbar-item">
-                            <button class="btn btn-order shadow-none" onclick="window.location.href='grocery.html';">
+                            <button class="btn btn-order shadow-none" onclick="window.location.href='place_order.html';">
                             Place Order</button>
                         </li>
                     </ul>
@@ -100,7 +100,7 @@
                     </div>
                     <div class="form-group">
                         <label for="address">Address</label>
-                        <input type="text" class="form-control" id="address" name="address" value="134 zanddreef Amsterdam" required title="Address cannot be empty.please choose a desired location to get the corresponding address">
+                        <input type="text" class="form-control" id="address" name="address" value="134 zanddreef Amsterdam" required title="Address cannot be empty.please choose a desired location to get the corresponding address readonly">
                     </div>
                     <div class="form-group row">
                         <div class="col-md-7">
@@ -164,7 +164,7 @@
                     <label for="grocList">Grocery List</label>
                     <div id="groceryList">
                     </div>
-                     <div class="form-group hide">
+                     <div class="form-group">
                         
                         <textarea class="form-control" id="grocList" name="grocerylist" rows="20" required title="Grocery List cannot be empty.Please atleast add 1 item to the list"></textarea>
                     </div>
