added comments to addItem.js and added styles to schedule

--- a/place_order.html
+++ b/place_order.html
@@ -157,7 +157,7 @@
                             </select>
                         </div>
                         <div class="col-md-2 btn-add">
-                            <input type="button" value="Add to list" onclick="gaddItem()">
+                            <input type="button" value="Add to list" onclick="addItem()">
                         </div>
                     </div>
                     <div class="form-group">
