changed the variable declaration in addItem.js

--- a/place_order.html
+++ b/place_order.html
@@ -262,7 +262,7 @@
         
         <!--custom JS files -->
         <script src="assets/js/getAddress.js"></script>
-        <script src="assets/js/gaddItem.js"></script>
+        <script src="assets/js/addItem.js"></script>
         <script src="assets/js/sendMail.js"></script> 
     <!-- end of Script files-->    
 </body>
