added margin and padding for small screen and adjusted font-size

--- a/place_order.html
+++ b/place_order.html
@@ -74,7 +74,7 @@
     <!-- Place order form-->  
     <!--code reference from Bootstrap with modifications-->
             <div id="place_order">
-                <h3>Send your order Today!!!! </h3>
+                <h3 class ="form-header">Send your order Today!!!! </h3>
                 <form onsubmit="return sendMail(this);" id="orderForm" name="contactForm">
                     <div class="form-group">
                         <label for="name">Name</label>
@@ -171,8 +171,10 @@
                     <div class="form-btn">
                         <input type="submit" class="btn btn-form" value="submit">
                     </div>
+                </div>
                 </form>
              </div>
+            
     <!-- End of  Place order form-->  
 
     <!-- Footer-->
