--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body onload="highlightToday()">
     <!-- Title and Navbar -->
     <header>
-            <nav class="navbar navbar-expand-md navbar-light bg-dark ml-auto bg-navbar">
+            <nav class="navbar navbar-expand-lg navbar-light bg-dark ml-auto bg-navbar">
             <!-- Brand Title on top left -->
             <div class="brand">
                 <a class="navbar-brand" href="index.html">
@@ -73,7 +73,7 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <div class="carousel-caption">
+                    <div class="carousel-caption carousel_caption1">
                              <h3>Indian Grocery On Wheels<br> in 5 big cities <br>of Netherlands.
                             </h3>
                             <i class="fas fa-truck"></i>
@@ -81,7 +81,7 @@
                     <img src="assets/images/carousel/Indianflags.jpg" class="d-block w-100 carousel-image"  >
                 </div>
                 <div class="carousel-item">
-                    <div class="carousel-caption">
+                    <div class="carousel-caption carousel_caption2">
                     <h3>You can buy all your favourite Indian <br>Veggies, Fruits, spices and<br>much more in one stop</h3>
                     <i class="fas fa-shopping-cart"></i>
                     </div>
