--- a/place_order.html
+++ b/place_order.html
@@ -26,7 +26,7 @@
 <body>
     <!-- title and navbar--> 
     <header>
-            <nav class="navbar navbar-expand-md navbar-light bg-dark ml-auto bg-navbar">
+            <nav class="navbar navbar-expand-lg navbar-light bg-dark ml-auto bg-navbar">
             <!-- Brand Title on top left -->
             <div class="brand">
                 <a class="navbar-brand" href="index.html">
