added media queries for medium and large screen

--- a/index.html
+++ b/index.html
@@ -277,8 +277,8 @@
             </div>
             <div class="container map-wrapper">
                         <div class="row">
-                            <div class="col-12 col-lg-8" id="map">Location</div>
-                            <div class="col-12 col-lg-4">
+                            <div class="col-12 col-lg-6 col-xl-8" id="map">Location</div>
+                            <div class="col-12 col-lg-6 col-xl-4">
                                 <div id="map-info">
                                     <!-- Location Amsterdam --> 
                                     <div class="card location show" id="Amsterdam">
