--- a/place_order.html
+++ b/place_order.html
@@ -103,7 +103,7 @@
                         <input type="text" class="form-control" id="address" name="address" value="134 zanddreef Amsterdam" required title="Address cannot be empty.please choose a desired location to get the corresponding address readonly">
                     </div>
                     <div class="form-group row">
-                        <div class="col-md-7">
+                        <div class="col-md-6 col-lg-7">
                             <label for="items">Groceries</label>
                             <select class="form-control" name="grocery_items" id="grocery_items" required>
                                 <optgroup label="Fruits">
@@ -141,7 +141,7 @@
                                 </optgroup>
                             </select>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-2 col-lg-2">
                             <label for="items">Qty</label>
                             <select class="form-control" id="quantity" name="quantity" required>
                                 <option>1</option>
@@ -156,7 +156,7 @@
                                 <option>10</option>
                             </select>
                         </div>
-                        <div class="col-md-2 btn-add">
+                        <div class="col-md-4 col-lg-3 btn-add">
                             <input type="button" value="Add to list" onclick="addItem()">
                         </div>
                     </div>
