added media queries for acknowledgement page and large and Xl screen

--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
         <div class="row">
             <div class="col">
                 <div id="schedule-header">
-                   <h2>Know our Schedule</h2>
-                    <p>We receive our consignment from India every saturday.We visit 5 places in Netherlands every week. 
+                   <h2 class="schedule-heading">Know our Schedule</h2>
+                    <p class="schedule-text">We receive our consignment from India every saturday.We visit 5 places in Netherlands every week. 
                         The schedule for which is given below. We are not available on weekends. Please place your orders online to minimise the waiting time at the 
                     location, as we have the orders packed and ready to be delivered.</p>
                 </div>
@@ -277,8 +277,8 @@
             </div>
             <div class="container map-wrapper">
                         <div class="row">
-                            <div class="col-12 col-lg-6 col-xl-8" id="map">Location</div>
-                            <div class="col-12 col-lg-6 col-xl-4">
+                            <div class="col-12 col-lg-6 col-xl-7" id="map">Location</div>
+                            <div class="col-12 col-lg-6 col-xl-5">
                                 <div id="map-info">
                                     <!-- Location Amsterdam --> 
                                     <div class="card location show" id="Amsterdam">
@@ -296,8 +296,8 @@
                                         <div class="card-info">
                                             <h4 class="card-title">Uterecht</h4>
                                             <img src="assets/images/map_info/uterecht.jpg" alt="pic of uterecht">
-                                            <p class="card-text">ADDRESS: Vredenburg, 3511 CW Utrecht</p>   
-                                            <p class="card-text">LANDMARK: opp to Jumbo food market</p>
+                                            <p class="card-text"><u>Address:</u> Vredenburg, 3511 CW Utrecht</p>   
+                                            <p class="card-text"><u>Landmark:</u> opp to Jumbo food market</p>
                                             <p class="card-text bg-text">we are at this Location on Tuesday from 6 to 9pm.</p>
                                         </div>
                                     </div>
@@ -307,8 +307,8 @@
                                         <div class="card-info">
                                             <h4 class="card-title">Den Bosch</h4>
                                             <img src="assets/images/map_info/denbosch.jpg" alt="pic of denbosch">
-                                            <p class="card-text">ADDRESS: Markt, 5211 GA 's-Hertogenbosch</p>   
-                                            <p class="card-text">LANDMARK: opp to Bijnkorf</p>
+                                            <p class="card-text"><u>Address:</u> Markt, 5211 GA 's-Hertogenbosch</p>   
+                                            <p class="card-text"><u>Landmark:</u> opp to Bijnkorf</p>
                                             <p class="card-text bg-text">we are at this Location on Wednesday from 6 to 9pm.</p>
                                         </div>
                                     </div>
@@ -318,8 +318,8 @@
                                         <div class="card-info">
                                             <h4 class="card-title">Eindhoven</h4>
                                             <img src="assets/images/map_info/eindhoven.jpg" alt="pic of eindhoven">
-                                            <p class="card-text">ADDRESS: Wilhelminaplein, 5611 JC Eindhoven</p>   
-                                            <p class="card-text">LANDMARK: opp to SGE Kinderijk</p>
+                                            <p class="card-text"><u>Address:</u> Wilhelminaplein, 5611 JC Eindhoven</p>   
+                                            <p class="card-text"><u>Landmark:</u> opp to SGE Kinderijk</p>
                                             <p class="card-text bg-text">we are at this Location on Thurdsday from 6 to 9pm.</p>
                                         </div>
                                     </div>
@@ -329,8 +329,8 @@
                                         <div class="card-info">
                                             <h4 class="card-title">Maastricht</h4>
                                             <img src="assets/images/map_info/maastricht.jpg" alt="pic of maastricht">
-                                            <p class="card-text">ADDRESS: Mosae Forum 99, 6211 DW Maastricht</p>   
-                                            <p class="card-text">LANDMARK: opp to Bijnkorf</p>
+                                            <p class="card-text"><u>Address:</u> Mosae Forum 99, 6211 DW Maastricht</p>   
+                                            <p class="card-text"><u>Landmark:</u> opp to Bijnkorf</p>
                                             <p class="card-text bg-text">we are at this Location on Friday from 6 to 9pm.</p>
                                         </div>
                                     </div>
@@ -348,18 +348,18 @@
                 <div class="container-fluid footer-container">
                     <div class="row footer-details">
                 <!-- Copyrgiht -->
-	            <div class="col-md-12 col-lg-4 col-footer">
+	            <div class="col-md-12 col-lg-3 col-footer">
                     <div>
                         <h5 class="text-center footer-copyright">copyright 2021<br>
                         <u>Opening Hours</u></h5>
-                        <h6 class="text-center">Mon-Fri from 6 pm to 9 pm<br>
+                        <h6 class="text-center">Mon-Fri 6-9 pm<br>
                         Closed on Weekends<br>
                     </h6>
                     </div>
                 </div>
 
                 <!-- Reach out to us -->
-                <div class="col-md-12 col-lg-4 col-footer">
+                <div class="col-md-12 col-lg-5 col-footer">
                     <div>
                         <h5 class="text-center"><u>Reach out to us</u></h5>
                             <div class="footer-contact">
