--- a/place_order.html
+++ b/place_order.html
@@ -63,7 +63,7 @@
     <!--./ title and navbar--> 
 
     <!-- acknowledgement message made visible only after the successful submission of the order-->
-        <div id="acknowledgement" class="hide">
+        <div id="acknowledgement">
             <img src="assets/images/place_order/acknowledgement-img.jpg" alt="thankyoupic">
             <h2> Desi Wagon has received Your order!!!</h2>
             <h3>You can pick your orders at the chosen place on the secheduled day.
