fixed the space issue in additem.js and made the list item readonly and added some media queries to XL screen

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
             <div class ="container map-container">
             <div class="location-header">
                 <h2>Location</h2> 
-                <p>We station at specific location in each city. Please check for the address that we would be statoned at in each city.</p>
+                <p>We station at specific location in each city. Please check for the address that we would be stationed at in each city.</p>
             </div>
             <div class="container map-wrapper">
                         <div class="row">
