--- a/place_order.html
+++ b/place_order.html
@@ -63,7 +63,7 @@
     <!--./ title and navbar--> 
 
     <!-- acknowledgement message made visible only after the successful submission of the order-->
-        <div id="acknowledgement">
+        <div id="acknowledgement" class="hide">
             <img src="assets/images/place_order/acknowledgement-img.jpg" alt="thankyoupic">
             <h2> Desi Wagon has received Your order!!!</h2>
             <h3>You can pick your orders at the chosen place on the secheduled day.
@@ -166,7 +166,7 @@
                     </div>
                      <div class="form-group">
                         
-                        <textarea class="form-control" id="grocList" name="grocerylist" rows="20" required title="Grocery List cannot be empty.Please atleast add 1 item to the list"></textarea>
+                        <textarea class="form-control hide" id="grocList" name="grocerylist" rows="20" required title="Grocery List cannot be empty.Please atleast add 1 item to the list"></textarea>
                     </div>
                     <div class="form-btn">
                         <input type="submit" class="btn btn-form" value="submit">
