changed lat for google map and adjusted margin for blinking truck in schedule

--- a/place_order.html
+++ b/place_order.html
@@ -100,7 +100,7 @@
                     </div>
                     <div class="form-group">
                         <label for="address">Address</label>
-                        <input type="text" class="form-control" id="address" name="address" value="134 zanddreef Amsterdam" required title="Address cannot be empty.please choose a desired location to get the corresponding address readonly">
+                        <input type="text" class="form-control" id="address" name="address" value="134 zanddreef Amsterdam" disabled required title="Address cannot be empty.please choose a desired location to get the corresponding address readonly">
                     </div>
                     <div class="form-group row">
                         <div class="col-md-6 col-lg-7">
