added wireframe images to images folder and fixed the jumbotron button broken link

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <div class="carousel-item">
                     <div class="carousel-caption carousel_caption3">
                     <h3>Place your order today<br> pick them at your desired location</h3>
-                    <button class="btn jumbotron-btn btn-dark btn-order shadow-none" onclick="window.location.href='grocery.html';">
+                    <button class="btn jumbotron-btn btn-dark btn-order shadow-none" onclick="window.location.href='place_order.html';">
                             Place Order</button>
                     </div>
                     <img src="assets/images/carousel/Indianflags.jpg" class="d-block w-100 carousel-image"  >
